--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
 
-
-  <input type="button" value="Rock" class="btn">
-  <input type="button" value="Paper" class="btn">
-  <input type="button" value="Scissors" class="btn">
+  <div class="allBtns">
+    <input type="button" value="Rock" class="btn" id="btn1">
+    <input type="button" value="Paper" class="btn" id="btn2">
+    <input type="button" value="Scissors" class="btn" id="btn3">
+  </div>
 
 
   <h1 class="input-prompt">Select one of the buttons to play...</h1>
