--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <p class="score">Your Score: <span class="ps">0</span> </p>
   <p class="compScore">Computer Score: <span class="cs">0</span> </p>
-  <p class="winner"><span class="win"></span> </p>
+  <p class="winner">Winner: <span class="win"></span> </p>
   <input type="button" value="Reset" class="res">
 
   <script src="app.js"></script>
