--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-  <div class="allBtns">
+  <div class="allBtns u-full-width">
     <input type="button" value="Rock" class="btn" id="btn1">
     <input type="button" value="Paper" class="btn" id="btn2">
     <input type="button" value="Scissors" class="btn" id="btn3">
@@ -21,7 +22,7 @@
 
   <p class="score">Your Score: <span class="ps">0</span> </p>
   <p class="compScore">Computer Score: <span class="cs">0</span> </p>
-  <p class="winner">Winner: <span class="win"></span> </p>
+  <p class="winner"><span class="win"></span> </p>
   <input type="button" value="Reset" class="res">
 
   <script src="app.js"></script>
